# Halo_Demo

./: pyproject.toml
baselines/: README.md  metrics.py  run_db_worker_unicorn.sh  tpch_utils.py
baselines/agentscope/: finewiki_bridges_agentscope.py  finewiki_long_chain_agentscope.py  imdb_diamond_agentscope.py  imdb_diamond_http_agentscope.py  imdb_triple_chain_agentscope.py  tpch_fanout_agentscope.py  tpch_fanout_http_agentscope.py  tpch_layerd_agentscope.py  tpch_trident_agentscope.py
baselines/db_worker/: unicorn_worker.py
baselines/langgraph/: finewiki_bridges_langgraph.py  imdb_diamond_langgraph.py  (+8 more)
halo_dev/: __init__.py  db.py  engines.py  executor.py  metrics.py  models.py  monitoring.py  node_processors.py  optimizer.py  parser.py  processor.py  profiler.py  query_planner.py  utils.py  worker.py
run/: __init__.py  db_microbench.py  finewiki_runner.py  imdb_runner.py  query_sampler.py  runner_utils.py  tpch_runner.py
templates/: finewiki_bridges.yaml  finewiki_bridges_http.yaml  finewiki_heavy.yaml  finewiki_light.yaml  finewiki_long_chain.yaml  finewiki_long_chain_http.yaml  finewiki_qa_agent.yaml  finewiki_tiny.yaml  finewiki_two_stage.yaml  imdb_db_heavy.yaml  imdb_diamond.yaml  imdb_diamond_http.yaml  imdb_diamond_light.yaml  imdb_fanout.yaml  imdb_flat.yaml  imdb_light_linear.yaml  imdb_triple_chain.yaml  imdb_triple_chain_http.yaml  imdb_two_stage.yaml  tpcc_neworder.yaml  tpcc_payment.yaml  tpch_fanin.yaml  tpch_fanout.yaml  tpch_fanout2.yaml  tpch_fanout_http.yaml  tpch_layerd.yaml  tpch_sided.yaml  tpch_trident.yaml  tpch_trident_http.yaml
(+29 files in other folders)
