[project]
name = "halo-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "vllm>=0.11.0",
    "pyyaml>=6.0.0",
    "psycopg[binary]>=3.1.0",
    "datasets>=4.4.1",
    "pulp>=2.7.0",
]

[project.optional-dependencies]
dp-rust = [
    "maturin>=1.5.0",
    "pyo3>=0.21.0",
]
